# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- Create daily loop event to make thinks every 24 hours

### Fix

- Resolvido problema ao ver o banimento de um usuário
- Resolvido problema do blackjack de mandar imagem quando não se responde

## [3.4.3] 2021-11-09

### Added

- Novo comando de imagem `/vasco`

### Fix

- Resolvido o comando inventário não funcionar caso o usuário tenha o item `Necare Hêmítheos`
- Resolvido problema do trisal quando nao encontrava usuarios
- Resolvido erro ao usuários caçarem pela primeira vez

## [3.4.2] 2021-11-09

### Fix

- Problema no comando inventário
- Badges de usuário casado mostrando mesmo se o usuário não estiver casado

## [3.4.1] 2021-11-09

### Fix

- Resolvido problema que o sistema de votos não salvava os dados

## [3.4.0] 2021-11-08

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS** - Com itens mágicos, usuários podem aumentar suas chances de caça, trazendo alguns tipos de caças para sempre obterem sucesso
- Tempo de Cooldown de caças: O tempo base da caça é de uma hora, mas esse tempo pode ser reduzido a partir de itens mágicos que reduzem o cooldown de caça. Esses itens possuem uma porcentagem de drop ao caçar
- Usuários banidos não podem ser mamados