@@ -33,5 +33,6 @@
   "USER_MISSING_PERMISSION": "you must have the `{{perm}}` permission in order to execute this command.",
   "CLIENT_MISSING_PERMISSION": "I must have the `{{perm}}` permission in order to execute this command.",
   "BANNED_INFO": "you are banned from using Menhera!\n\nReason: `{{banReason}}`",
-  "DISABLED_COMMAND": "This command is disabled on this server! Use `/blockcommand {{cmd}}` to re-enable it"
+  "DISABLED_COMMAND": "This command is disabled on this server! Use `/blockcommand {{cmd}}` to re-enable it",
+  "ECONOMY_COMMAND_EXECUTION": "You cannot use this command as you are still using another saving command! Finish running that command and try again\n\n**THINKING IT'S A BUG?** Come to Menhera's support server `/suporte` and ask for help"
 }
