@@ -30,8 +30,9 @@
   "ONLY_DEVS": "Este comando é de uso esclusivo da minha dona >...<",
   "SLASH_COMMAND": "Este comando já está disponível em slash!",
   "UNKNOWN_SLASH": "> Este comando não existe!",
-  "USER_MISSING_PERMISSION": "você não tem a permissão de `{{perm}}` para poder executar este comando.",
-  "CLIENT_MISSING_PERMISSION": "eu não tenho permissão de `{{perm}}` para poder executar este comando.",
-  "BANNED_INFO": "você está banido de utilizar a Menhera!\n\nMotivo: `{{banReason}}`",
-  "DISABLED_COMMAND": "Este comando está desabilitado neste servidor! Use `/blockcommand {{cmd}}` para reabilitá-lo"
+  "USER_MISSING_PERMISSION": "Você não tem a permissão de `{{perm}}` para poder executar este comando.",
+  "CLIENT_MISSING_PERMISSION": "Eu não tenho permissão de `{{perm}}` para poder executar este comando.",
+  "BANNED_INFO": "Você está banido de utilizar a Menhera!\n\nMotivo: `{{banReason}}`",
+  "DISABLED_COMMAND": "Este comando está desabilitado neste servidor! Use `/blockcommand {{cmd}}` para reabilitá-lo",
+  "ECONOMY_COMMAND_EXECUTION": "Você não pode utilizar este comando pois ainda está usando outro comando de economia! Termine a execução daquele comando e tente novamente\n\n**ACHA QUE É UM BUG?** Venha ao servidor de suporte da Menhera `/suporte` e peça ajuda"
 }
