@@ -181,6 +181,16 @@ const InteractionCommandExecutor = async (
     }
   }
 
+  if (command.config.category === 'economy' && client.economyExecutions.has(interaction.user.id)) {
+    await interaction
+      .reply({
+        content: `<:negacao:759603958317711371> | ${t('permissions:ECONOMY_COMMAND_EXECUTION')}`,
+        ephemeral: true,
+      })
+      .catch(debugError);
+    return;
+  }
+
   const authorData =
     command.config.authorDataFields.length > 0
       ? await client.repositories.userRepository.findOrCreate(
@@ -196,9 +206,13 @@ const InteractionCommandExecutor = async (
     { server, user: authorData },
   );
 
-  try {
-    if (!command.run) return;
-    await command.run(ctx).catch(async (err) => {
+  if (!command.run) return;
+
+  if (command.config.category === 'economy') client.economyExecutions.add(ctx.author.id);
+
+  await command
+    .run(ctx)
+    .catch(async (err) => {
       const errorWebHook = await client.fetchWebhook(
         process.env.BUG_HOOK_ID as string,
         process.env.BUG_HOOK_TOKEN as string,
@@ -235,42 +249,10 @@ const InteractionCommandExecutor = async (
 
         errorWebHook.send({ embeds: [embed] }).catch(debugError);
       }
+    })
+    .finally(() => {
+      if (command.config.category === 'economy') client.economyExecutions.delete(ctx.author.id);
     });
-  } catch (err) {
-    const errorWebHook = await client.fetchWebhook(
-      process.env.BUG_HOOK_ID as string,
-      process.env.BUG_HOOK_TOKEN as string,
-    );
-
-    if (interaction.deferred) {
-      interaction.webhook
-        .send({ content: t('events:error_embed.title'), ephemeral: true })
-        .catch(debugError);
-    } else
-      interaction
-        .reply({ content: t('events:error_embed.title'), ephemeral: true })
-        .catch(debugError);
-
-    if (err instanceof Error && err.stack) {
-      const errorMessage = err.stack.length > 1800 ? `${err.stack.slice(0, 1800)}...` : err.stack;
-      const embed = new MessageEmbed();
-      embed.setColor('#fd0000');
-      embed.setTitle(
-        `${process.env.NODE_ENV === 'development' ? '[BETA]' : ''} ${t('events:error_embed.title', {
-          cmd: command.config.name,
-        })}`,
-      );
-      embed.setDescription(`\`\`\`js\n${errorMessage}\`\`\``);
-      embed.addField(
-        '<:atencao:759603958418767922> | Usage',
-        `UserId: \`${interaction.user.id}\` \nServerId: \`${interaction.guild?.id}\``,
-      );
-      embed.setTimestamp();
-      embed.addField(t('events:error_embed.report_title'), t('events:error_embed.report_value'));
-
-      errorWebHook.send({ embeds: [embed] }).catch(debugError);
-    }
-  }
 
   if (!interaction.guild || process.env.NODE_ENV === 'development') return;
   const data: ICommandUsedData = {
